// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

option go_package = "waypoint/builtin/pack";

package pack;

// DockerImage is the artifact type for the builder.
message DockerImage {
  string image = 1;
  string tag = 2;
  map<string, string> build_labels = 3;
  bool remote = 4;
}
